@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.ancap</groupId>
     <artifactId>AncapWars</artifactId>
-    <version>1.1.22</version>
+    <version>1.1.23</version>
 
     <properties>
-        <java.version>22</java.version>
+        <java.version>21</java.version>
         <encoding>UTF-8</encoding>
     </properties>
 
@@ -36,7 +36,6 @@
                     <target>${java.version}</target>
                     <encoding>${encoding}</encoding>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse> <!-- Anticipatory JDK 21 support -->
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
